[.github] Change when CI runs
Now runs on ros2 branch instead of nonexistent galactic branch. Renames
workflow file. Renames workflow.

--- a/.github/workflows/ros2.yaml
+++ b/.github/workflows/ros2.yaml
@@ -1,13 +1,13 @@
-name: build-galactic
+name: build-ros2
 
 on:
   push:
     branches:
-      - galactic
+      - ros2
       - ros2-devel
   pull_request:
     branches:
-      - galactic
+      - ros2
       - ros2-devel
   workflow_dispatch:
 
@@ -16,7 +16,7 @@ defaults:
     shell: bash
 
 jobs:
-  galactic:
+  build-ros2-galactic:
     strategy:
       matrix:
         env:
