[.github] Add humble CI

--- a/.github/workflows/ros2.yaml
+++ b/.github/workflows/ros2.yaml
@@ -35,3 +35,22 @@ jobs:
           path: src
       - uses: 'ros-industrial/industrial_ci@master'
         env: ${{matrix.env}}
+  build-ros2-humble:
+    strategy:
+      matrix:
+        env:
+          - {ROS_DISTRO: humble, ROS_REPO: main}
+    runs-on: ubuntu-22.04
+    steps:
+      - name: Check out X-Series Driver
+        uses: actions/checkout@v3
+        with:
+          path: src
+      - name: Check out DYNAMIXEL Workbench Toolbox
+        uses: actions/checkout@v3
+        with:
+          repository: Interbotix/dynamixel-workbench
+          ref: ros2
+          path: src
+      - uses: 'ros-industrial/industrial_ci@master'
+        env: ${{matrix.env}}
