[.github] Add humble and rolling ci

--- a/.github/workflows/ros2.yaml
+++ b/.github/workflows/ros2.yaml
@@ -16,12 +16,14 @@ defaults:
     shell: bash
 
 jobs:
-  build-ros2-galactic:
+  build-ros2:
     strategy:
       matrix:
         env:
           - {ROS_DISTRO: galactic, ROS_REPO: main}
-    runs-on: ubuntu-20.04
+          - {ROS_DISTRO: humble, ROS_REPO: main}
+          - {ROS_DISTRO: rolling, ROS_REPO: main}
+    runs-on: ubuntu-latest
     steps:
       - name: Check out X-Series Driver
         uses: actions/checkout@v3
@@ -35,22 +37,3 @@ jobs:
           path: src
       - uses: 'ros-industrial/industrial_ci@master'
         env: ${{matrix.env}}
-  # build-ros2-humble:
-  #   strategy:
-  #     matrix:
-  #       env:
-  #         - {ROS_DISTRO: humble, ROS_REPO: main}
-  #   runs-on: ubuntu-22.04
-  #   steps:
-  #     - name: Check out X-Series Driver
-  #       uses: actions/checkout@v3
-  #       with:
-  #         path: src
-  #     - name: Check out DYNAMIXEL Workbench Toolbox
-  #       uses: actions/checkout@v3
-  #       with:
-  #         repository: Interbotix/dynamixel-workbench
-  #         ref: ros2
-  #         path: src
-  #     - uses: 'ros-industrial/industrial_ci@master'
-  #       env: ${{matrix.env}}
