--- a/package.xml
+++ b/package.xml
@@ -5,7 +5,7 @@
   <version>0.3.3</version>
   <description>Provides low-level interfaces to easily control an Interbotix X-Series Robot.</description>
   <maintainer email="trsupport@trossenrobotics.com">Luke Schmitt</maintainer>
-  <license>BSD</license>
+  <license>BSD-3-Clause</license>
   <author email="trsupport@trossenrobotics.com">Solomon Wiznitzer</author>
 
   <buildtool_depend>ament_cmake</buildtool_depend>
